Bug 1758664, don't try to recheck possible session history entry in the parent process if we're doing such check already, r=peterv, a=dmeehan

The code which this patch removes was clearly an oversight in the regressing patch.

Differential Revision: https://phabricator.services.mozilla.com/D140690